--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prisma": "^5.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-simplemde-editor": "^5.2.0",
     "tailwindcss": "3.4.1",
