--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "18.2.57",
     "@types/react-dom": "18.2.19",
     "autoprefixer": "10.4.17",
+    "axios": "^1.6.7",
     "classnames": "^2.5.1",
     "easymde": "^2.18.0",
     "eslint": "8.56.0",
